# text_utils_trusted

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/text_utils/: __init__.py  formatacao.py
tests/: test_formatacao.py
