[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-utils-trusted"
version = "0.1.2"
description = "Biblioteca para manipulação de texto"
readme = "README.md"
authors = [
    {name = "Ronnie Campos", email = "roniepris@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = []

[project.urls]
"Homepage" = "https://github.com/roniepris/text_utils_trusted"
